# iot_server

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose-override.yml  docker-compose.yml  example.env  iot-server-api.service  nginx_config  nginxconfigexample  systemdapp.service
.github/workflows/: deploy-staging.yml  master.yml  qa.yml  test.yml  test_handler.yml  test_logging.yml  test_receiver.yml  test_userapi.yml  tests-staging.yml  tests.yml
.github/workflows/tests/: test_userapi.yml
aws/: install_d.sh  load_test.py
doc/: schema.sql
handler/: .dockerignore  Dockerfile  del.py  prestart.sh  pyproject.toml  tests-start.sh
handler/src/: config.py  consumer.py  main.py  pre_start.py
handler/src/core/: abs.py  connection.py  handlers.py  message_handlers.py
handler/src/core/database/: db.py  engine.py
handler/src/logger/: channel.py  config.py  filter_cid.py  handler.py  setup.py
handler/src/queues/: consumer_connection.py  log_connection.py
handler/tests/: conftest.py  test_connection.py  test_db.py  test_message_handlers.py
handler/tests/logger/: test_channel.py  test_handler.py
logging/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  logger-config.json  prestart.sh  pyproject.toml  tests-start.sh
logging/src/: .dockerignore  config.py  consumer.py  data.py  handler.py  logger-config.json  main.py  pre_start.py  puller.py
logging/src/core/: abs.py  channels.py  connection.py  data.py  handlers.py  manager.py  time_service.py
logging/src/logger/: config.py  setup.py
logging/src/tests/: load_test.py  test_handler.py  test_puller.py
logging/tests/: test_conn_manager.py  test_data.py  test_handler.py  test_handlers.py  test_puller.py
receiver/: .gitignore  Dockerfile  Makefile  README.md  prestart.sh  pyproject.toml  tests-start.sh
receiver/src/: config.py  doc.py  errors.py  main.py  message_handler.py  models.py  pre_start.py
receiver/src/core/: publisher.py  sender.py
receiver/src/logger/: config.py  handler.py
receiver/src/publishers/: abs.py  channels.py  manager.py
receiver/src/queues/: channels.py  manager.py
receiver/src/route/: dependencies.py  router.py
receiver/tests/: conftest.py  test_log_handler.py  test_log_publisher.py  test_manager.py  test_message_handler.py  test_message_publisher.py  test_publisher_manager.py  test_route.py
receiver/tests/logger/: test_channel_log.py  test_handler_log.py
receiver/tests/others/: test_channel_log.py  test_channel_message.py  test_handler_log.py  test_handler_message.py  test_manager.py
receiver/tests/publisher/: test_channel_message.py  test_handler_message.py
receiver/tests/queue/: test_manager.py
receiver/tests/route/: test_route.py
scripts/: clean-cache.sh  test-CI.sh  test-local.sh
user_api/: .dockerignore  .gitignore  Dockerfile  Makefile  prestart.sh  pyproject.toml  tests-start.sh
user_api/src/: admin.py  backend_pre_start.py  crud.py  doc.py  errors.py  example_data.py  initial_data.py  main.py  models.py  tables.py  utils.py
user_api/src/admin/: __init__.py  device_view.py  environment_view.py  home_view.py  login.py  main.py  messages_view.py  site_view.py  user_view.py
user_api/src/admin/statics/js/: list.js
user_api/src/admin/templates/: device_detail.html  home.html  message_detail.html
user_api/src/api/: dependencies.py  main.py  rpc.py
user_api/src/api/routes/: devices.py  environments.py  login.py  messages.py  sites.py  users.py  utils.py
user_api/src/core/: config.py  db.py  security.py
user_api/src/logger/: config.py  handler.py  setup.py
user_api/src/mail/: utils.py
user_api/src/queue/: channels.py  manager.py
user_api/src/queues/: abs.py  channels.py  manager.py
user_api/tests/: conftest.py  test_utils.py
user_api/tests/api/: test_devices.py  test_environment.py  test_login.py  test_message.py  test_sites.py  test_users.py  test_utils.py
user_api/tests/crud/: test_cascade.py  test_device.py  test_environment.py  test_message.py  test_site.py  test_user.py
user_api/tests/func/: test_sec.py  test_utils.py
user_api/tests/logger/: test_channel_log.py  test_handler_log.py
user_api/tests/queue/: test_channel_log.py  test_channel_rpc.py  test_handler_log.py  test_manager.py
user_api/tests/scripts/: test_backend_pre_start.py
user_api/tests/utils/: utils.py
