[tool.poetry]
name = "handler"
version = "0.1.0"
description = ""
authors = ["kaiosatiro <kaiosatiro@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
pydantic-settings = "^2.4.0"
sqlmodel = "^0.0.21"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
flake8 = "^7.1.1"
ruff = "^0.6.1"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
